# analytics-platform-demo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  start.sh
.claude/: settings.json
backend/: README.md  config.py  db.py  main.py
docs/: architecture-traceability.md  demo-guide.md  development-guidelines.md  development-workflow-protocol.md  exploratory-testing-notes.md  feature-development-checklist.md  phase7b-testing-checklist.md  progress.md
frontend/: README.md  package-lock.json  package.json
qa/: __init__.py  __main__.py
scripts/: generate_analytics_tiers.py  generate_cases.py  generate_data.py  generate_golden_records.py  generate_observability_data.py  generate_oob_manifest.py  generate_snapshots.py
tests/: test_ai_assistant.py  test_ai_calc_generation.py  test_ai_triage.py  test_alert_generation.py  test_alert_layouts.py  test_alerts_masking.py  test_analytics_tiers_api.py  test_analytics_tiers_metadata.py  test_analytics_tiers_models.py  test_archive_service.py  test_audit_trail.py  test_calc_result_service.py  test_calculation_engine.py  test_case_api.py  test_case_medallion.py  test_case_models.py  test_case_service.py  test_consistency_validators.py  test_contract_validator.py  test_dashboard_contracts.py  test_data_generation.py  test_data_loader.py  test_data_masking_integration.py  test_date_range.py  test_db.py  test_demo_controller.py  test_detection_dry_run.py  test_detection_engine.py  test_domain_values.py  test_entity_compliance.py  test_event_integration.py  test_event_service.py  test_format_rules.py  test_glossary_api.py  (+78 more)
(+763 files in other folders)
